--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-hook-form": "^7.49.0",
     "react-router-dom": "^6.22.0",
     "zustand": "^4.5.0",
-    "emailjs-com": "^3.2.0"
+    "resend": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
