--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tiptap/react": "^2.1.16",
     "@tiptap/starter-kit": "^2.1.16",
     "date-fns": "^3.3.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^10.18.0",
     "lowlight": "^3.1.0",
     "lucide-react": "^0.344.0",
@@ -34,8 +35,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.49.0",
     "react-router-dom": "^6.22.0",
-    "zustand": "^4.5.0",
-    "resend": "^3.2.0"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
